--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -134,11 +134,11 @@
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <ul>
-                      <li><strong>00'00" - 00'20" - Scena 01_01_01:</strong> bianco/nero, uova, larve, linee rosse orizzontali</li>
+                      <li><strong>00'00" - 00'20" - Scena 01_01_01:</strong> bianco/nero, uova, bruchi, linee rosse orizzontali</li>
                       <li><strong>00'20" - 00'21" - Scena 02_01_01:</strong> bianco/nero, farfalle</li>
                       <li><strong>00'21" - 00'32" - Scena 01_02_01:</strong> variazione</li>
                       <li><strong>00'32" - 00'36" - Scena 03_01_01:</strong> bianco/nero, foglia, linee rosse orizzontali</li>
-                      <li><strong>00'36" - 00'40" - Scena 04_01_01:</strong> bianco/nero, foglie, larve, linee rosse orizzontali con impulso giallo</li>
+                      <li><strong>00'36" - 00'40" - Scena 04_01_01:</strong> bianco/nero, foglie, bruchi, linee rosse orizzontali con impulso giallo</li>
                       <li><strong>00'40" - 01'13" - Scena 05_01_01:</strong> bianco/nero, uovo, farfalla, linee rosse/gialle orizzontali</li>
                       <li><strong>01'13" - 01'15" - Scena 05_02_01:</strong> variazione</li>
                       <li><strong>01'15" - 01'23" - Scena 02_02_01:</strong> variazione</li>
@@ -146,9 +146,9 @@
                       <li><strong>01'24" - 01'42" - Scena 02_03_01:</strong> variazione</li>
                       <li><strong>01'42" - 01'43" - Scena 04_02_01:</strong> variazione</li>
                       <li><strong>01'43" - 01'44" - Scena 06_01_01:</strong> bianco/nero, mappa?</li>
-                      <li><strong>01'44" - 02'04" - Scena 07_01_01:</strong> bianco/nero, larve appese, linee rosse/gialle orizzontali</li>
+                      <li><strong>01'44" - 02'04" - Scena 07_01_01:</strong> bianco/nero, bruchi appesi, linee rosse/gialle orizzontali</li>
                       <li><strong>02'04" - 02'14" - Scena 07_02_01:</strong> variazione</li>
-                      <li><strong>02'14" - 02'32" - Scena 08_01_01:</strong> bianco/nero, uova con larve, linee rosse orizzontali</li>
+                      <li><strong>02'14" - 02'32" - Scena 08_01_01:</strong> bianco/nero, uova con bruchi, linee rosse orizzontali</li>
                       <li><strong>02'32" - 02'34" - Scena 02_04_01:</strong> variazione</li>
                       <li><strong>02'34" - 03'52" - Scena 08_02_01:</strong> variazione</li>
                       <li><strong>03'52" - 03'54" - Scena 02_05_01:</strong> variazione</li>
