--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -129,7 +129,7 @@
                     <li>descrizione dettagliata delle scene (posizione e movimento elementi, descrizione delle variazioni)</li>
                   </ul>
                 </p>
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5" style="text-align:center;">
                       <strong>PRIMA VISIONE</strong>
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
@@ -174,7 +174,7 @@
                     <li>Segnare inizio/fine scene sulla linea temporale</li>
                   </ul>
                 </p>
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5" style="text-align:center;">
                       <strong>SECONDA VISIONE</strong>
                   </h5>
                   <li><strong>00'00" - 00'20" - Scena 01_01_01:</strong> </li>
