--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -447,6 +447,76 @@
       </div>
   </section>
 
+  <!-- Week 4-->
+
+  <section data-bs-version="5.1" class="features19 cid-sZl8n0cr2l" id="features20-2c">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-9">
+                  <div class="card-wrapper pb-4">
+                      <div class="card-box align-center">
+                          <h4 class="card-title mbr-fonts-style mb-4 display-2" style="text-align:center;">
+                              <strong>Week 4</strong>
+                          </h4>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-md-8">
+
+                  <div class="item mbr-flex">
+                      <div class="icon-box">
+                          <span class="step-number mbr-fonts-style display-5">1</span>
+                      </div>
+                      <div class="text-box">
+                          <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
+                              <strong>Analisi Video Selezionati</strong>
+                          </h4>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
+                            <ul>
+                              <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html">Tecniche di Analisi Applicate al Video</a></li>
+                              </ul>
+                          </h5>
+                      </div>
+                  </div>
+                  <div class="item mbr-flex last">
+                      <div class="icon-box">
+                          <span class="step-number mbr-fonts-style display-5">2</span>
+                      </div>
+                      <div class="text-box">
+                          <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7">
+                              <strong>Sintesi Sonora</strong>
+                          </h4>
+                          <h5 class="icon-text mbr-black mbr-fonts-style display-4">
+                            <ul>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/granulatore.maxpat">Granulatore</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/effects.zip">Effects</a></li>
+                              <li><a href="https://www.gabrielavelitch.com/downloads/learn/patches_week_3/week_3.zip">Week 3 - patch riassuntiva</a></li>
+                            </ul>
+                          </h5>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+<!-- Consegna-->
+  <section data-bs-version="5.1" class="content7 cid-sZFF3RDqr1" id="content7-2d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-12 col-md-10">
+                  <blockquote>
+                  <h5 class="mbr-section-title mbr-fonts-style mb-2 display-4"><strong>CONSEGNA</strong></h5>
+                  <p class="mbr-text mbr-fonts-style display-4">
+                    <strong>VIDEO</strong>
+                    - scegliere il <a href="https://drive.google.com/drive/folders/1oTIU1EzG0LqTZYouC_KnUDc5oJRhR52D">video da sonorizzare</a> (intero o parziale senza limiti di durata)
+                </p>
+              </blockquote>
+              </div>
+          </div>
+      </div>
+  </section>
+
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
