--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -97,7 +97,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>Dimo Baharvand - The Birth</strong>
+                        <strong>Dimo Baharvand - The Birth (2021)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
 
