--- a/pages/learn/laboratorio_di_tecnologie_musicali.html
+++ b/pages/learn/laboratorio_di_tecnologie_musicali.html
@@ -281,7 +281,9 @@
                               <strong>Ascolto e Analisi Elaborati</strong>
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
-
+                            <ul>
+                              <li><a href="https://drive.google.com/drive/folders/1ZUWOb103mTfPjebaMPO1uyxMgXdkVZSx">Consegna 1</a></li>
+                              </ul>
                           </h5>
                       </div>
                   </div>
@@ -403,7 +405,7 @@
                           </h4>
                           <h5 class="icon-text mbr-black mbr-fonts-style display-4">
                             <ul>
-
+                              <li><a href="https://drive.google.com/drive/folders/1bWm6DF8cWaFMpUe5hJ_ZfUyVX1tmV-K0">Consegna 2</a></li>
                               </ul>
                           </h5>
                       </div>
