--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -159,12 +159,12 @@
                     <p class="mbr-text mbr-fonts-style display-7">
                     <strong>DOMANDE</strong>
                     <ul>
-                      <li><strong>Quante scene totali ci sono?</strong> </li>
-                      <li><strong>Quante scene uniche ci sono?</strong> </li>
-                      <li><strong>Quali sono le figure?</strong> </li>
-                      <li><strong>Quante sono le figure?</strong> </li>
-                      <li><strong>Quanti colori sono presenti?</strong> </li>
-                      <li><strong>Come sono i collegamenti tra le scene?</strong> </li>
+                      <li><strong>Quante scene totali ci sono?</strong> 21</li>
+                      <li><strong>Quante scene uniche ci sono?</strong> 9/li>
+                      <li><strong>Quali sono le figure?</strong> uovo, bruco, farfalla - metamorfosi</li>
+                      <li><strong>Quante sono le figure?</strong> 3 o 1</li>
+                      <li><strong>Quanti colori sono presenti?</strong> 4 ì bianco, nero, rosso e giallo</li>
+                      <li><strong>Come sono i collegamenti tra le scene?</strong> cambi istantanei</li>
                     </ul>
                   </p>
                   <p class="mbr-text mbr-fonts-style display-7">
@@ -177,12 +177,12 @@
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5" style="text-align:center;">
                       <strong>SECONDA VISIONE</strong>
                   </h5>
-                  <li><strong>00'00" - 00'20" - Scena 01_01_01:</strong> </li>
-                  <li><strong>00'20" - 00'21" - Scena 02_01_01:</strong> </li>
-                  <li><strong>00'21" - 00'32" - Scena 01_02_01:</strong> </li>
-                  <li><strong>00'32" - 00'36" - Scena 03_01_01:</strong> </li>
-                  <li><strong>00'36" - 00'40" - Scena 04_01_01:</strong> </li>
-                  <li><strong>00'40" - 01'13" - Scena 05_01_01:</strong> </li>
+                  <li><strong>00'00" - 00'20" - Scena 01_01_01:</strong> camera da presa vibra. bruchi che strisciano tra le uova. uova con movimento random distribuite in tutta la scena. linee rosse orizzontali lampeggiano. luminosità diminuisce dopo 3"</li>
+                  <li><strong>00'20" - 00'21" - Scena 02_01_01:</strong> tre farfalle che si muovono, scena breve, </li>
+                  <li><strong>00'21" - 00'32" - Scena 01_02_01:</strong> senso di continuità con la Scena 01_01_01</li>
+                  <li><strong>00'32" - 00'36" - Scena 03_01_01:</strong> in alto a destra un elemento si muove. la foglia collocata al centro della scena ha delle microvariazioni interne.</li>
+                  <li><strong>00'36" - 00'40" - Scena 04_01_01:</strong> bipartita foglie a sinistra, bruchi a destra. bruchi muovono le foglie. movimento randomico.</li>
+                  <li><strong>00'40" - 01'13" - Scena 05_01_01:</strong> la figura iniziale è un uovo al centro della scena. la farfalla esce dall'uovo. l'evento si ripete in loop per quattro volte con tagli netti ad ogni ripetizione. ogni ripetizione è variata.</li>
                   <li><strong>01'13" - 01'15" - Scena 05_02_01:</strong> </li>
                   <li><strong>01'15" - 01'23" - Scena 02_02_01:</strong> </li>
                   <li><strong>01'23" - 01'24" - Scena 05_03_01:</strong> </li>
