--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -203,9 +203,9 @@
                 <p class="mbr-text mbr-fonts-style display-7">
                 <strong>DOMANDE</strong>
                 <ul>
-                  <li><strong>Lo sfondo collabora con la figura?</strong> </li>
-                  <li><strong>È presente una narrazione?</strong> </li>
-                  <li><strong>La figura si evolve? Come:</strong> </li>
+                  <li><strong>Lo sfondo collabora con la figura?</strong> no</li>
+                  <li><strong>È presente una narrazione?</strong> si</li>
+                  <li><strong>La figura si evolve? Come:</strong> si, in maniera lineare seguendo il processo di metamorfosi della farfalla.</li>
                 </ul>
               </p>
               <p class="mbr-text mbr-fonts-style display-7">
