--- a/pages/learn/il_paradigma_di_stockhausen.html
+++ b/pages/learn/il_paradigma_di_stockhausen.html
@@ -134,7 +134,7 @@
                         <li><a href="https://velitch.github.io/velitch/2021-11-02-06_03_proiezione_della_formula/"><b>6.3. Proiezione della formula</b></a></li>
                         <li><a href="https://velitch.github.io/velitch/2021-11-02-06_04_schema/"><b>6.4. Schema</b></a></li>
                       </ul>
-                      </ul>  
+                      </ul>
                       </strong>
                       <br><br>
                   </p>
@@ -147,7 +147,7 @@
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
 
-  <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
+  <section style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
 
    <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
