--- a/pages/learn.html
+++ b/pages/learn.html
@@ -165,7 +165,7 @@
                       <h5 class="item-title mbr-fonts-style display-7">
                         <br><strong>Il Paradigma di Stockhausen</strong></h5>
                   </div>
-                  <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
+                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
                           &gt;</a></div>
                 </div>
             </div>
