--- a/pages/learn/il_paradigma_di_stockhausen/03_00_da_cosa_è_costituito_un_paradigma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/03_00_da_cosa_è_costituito_un_paradigma.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Paradigma</title>
+  <title>Da Cosa è Costituito un Paradigma</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,33 +78,12 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Il Paradigma di Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Il Paradigma</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Da Cosa è Costituito un Paradigma</strong></h4>
             </div>
         </div>
     </div>
 </section>
 
-
-  <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    L'equiparazione tra paradigma scientifico e paradigma in senso estetico è frutto delle riflessioni di un musicologo olandese che si chiama <i>Alcedo Coenen</i>.
-                    <br>
-                    <br>
-                    Ha pensato di stabilire una relazione tra il paradigma delle rivoluzioni scientifiche (cosi come é stato definito dallo studioso di filosofia e storia della scienza <i>Thomas Kuhn</i>) e i fatti estetici, le questioni relative all'arte e in particolare alla musica. In pratica è come se un determinato autore, nell'arco della sua esistenza, o nell'arco di alcune fasi della sua vita, agisse sulla base di un paradigma, di una condizione epistemologica (studio dei processi cognitivi attraverso la ricostruzione delle fasi di sviluppo di un individuo) paragonabile a quella con cui si svolge la scienza di un determinato periodo.
-                    <br>
-                    <br>
-                    Vediamo di cosa si tratta con l'aiuto di queste immagini:
-                    </p>
-                  </div>
-              </div>
-          </div>
-      </section>
 
 <!-- Image-->
       <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
@@ -112,29 +91,24 @@
               <div class="row justify-content-center">
                   <div class="col-12 col-lg-5">
                       <div class="image-wrapper">
-                          <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig1.png" alt="www.gabrielavelitch.com">
-                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 1</p>
+                          <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig2.png" alt="www.gabrielavelitch.com">
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 2</p>
                       </div>
                   </div>
               </div>
           </div>
       </section>
 
-      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-          <div class="container">
-              <div class="row justify-content-center">
-                  <div class="col-md-12 col-lg-8">
-                      <p class="mbr-text mbr-fonts-style display-7">
-                    <b>Paradigma vigente</b>: è l'insieme di tutta una serie di credenze, assunti e rappresentazioni che caratterizzano la scienza di un certo periodo.
+  <!-- Text-->
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-8">
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    La <i>fig.2</i> vuole rappresentare il rapporto di inclusione che hanno fra loro questi elementi.
                     <br>
                     <br>
-                    <i>Thomas Kuhn</i> sostiene che tutte le rivoluzioni scientifiche avvengono secondo uno schema simile e in particolare si ha una rivoluzione scientifica quando si presenta un'anomalia, ossia un problema che il paradigma vigente non é in grado di risolvere. Questo mette in crisi il vecchio paradigma e determina il sorgere di nuove ipotesi che tuttavia, pur facendo emergere di già un nuovo paradigma, entrano per il momento in conflitto con il paradigma vigente e quindi si creano fratture tra i sostenitori di un vecchio stato di cose e i sostenitori del nuovo.
-                    <br>
-                    <br>
-                    Alla fine, inevitabilmente, il nuovo paradigma vigente è quello che esce fuori dalle risoluzioni di questo conflitto. Si ha dunque un nuovo assetto di convinzioni, rappresentazioni e assunti di base.
-                    <br>
-                    <br>
-                    Possiamo dunque dire che il paradigma vigente, per quanto riguarda la musica, i periodi storici e gli autori, é un insieme stabile di condizioni e convinzioni. Questa parificazione ci è utile perché ci permette in prospettiva di considerare eventuali fratture storiche o anomalie, sotto questo tipo di rappresentazione concettuale <i>(fig.1)</i>.
+                    <b>Valori:</b> elementi fondativi, le fondamenta ultime delle nostre conoscenze.
                   </p>
                 </div>
             </div>
@@ -142,6 +116,119 @@
     </section>
 
 
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig3_1.png" alt="www.gabrielavelitch.com">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 3_1</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
+    <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      <b>Modelli:</b> metafore o rappresentazioni, immagini che ci servono a rendere l'idea della nostra ricerca.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+
+      <!-- Image-->
+            <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-lg-5">
+                            <div class="image-wrapper">
+                                <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig3_2.png" alt="www.gabrielavelitch.com">
+                                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 3_2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+      <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+          <div class="container">
+              <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-8">
+                      <p class="mbr-text mbr-fonts-style display-7">
+                        <b>Generalizzazioni:</b> punti di arrivo della ricerca che vengono dati per buoni e resi come elementi generali.
+                      </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Image-->
+              <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                  <div class="container-fluid">
+                      <div class="row justify-content-center">
+                          <div class="col-12 col-lg-5">
+                              <div class="image-wrapper">
+                                  <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig4.png" alt="www.gabrielavelitch.com">
+                                  <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4</p>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </section>
+
+
+        <!-- Text-->
+      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12 col-lg-8">
+                        <p class="mbr-text mbr-fonts-style display-7">
+                          <b>Esemplari:</b> casi specifici in cui determinate teorie scientifiche possono essere esemplificate.
+                          Vediamo ora come tutto questo si può tradurre in un paradigma musicale.
+                        </p>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
+
+          <!-- Image-->
+                <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-lg-5">
+                                <div class="image-wrapper">
+                                    <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig4_2.png" alt="www.gabrielavelitch.com">
+                                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4_2</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Image-->
+                      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                          <div class="container-fluid">
+                              <div class="row justify-content-center">
+                                  <div class="col-12 col-lg-5">
+                                      <div class="image-wrapper">
+                                          <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig5.png" alt="www.gabrielavelitch.com">
+                                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 5</p>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
