--- a/pages/learn/il_paradigma_di_stockhausen/01_00_il_paradigma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/01_00_il_paradigma.html
@@ -148,8 +148,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center">
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/02_00_il_concetto_di_pregiudizio.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
