--- a/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
+++ b/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
@@ -86,9 +86,7 @@
 
 
   <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
@@ -98,44 +96,198 @@
                     <br>
                     Composizioni analizzate e discusse da Stockhausen nei suoi scritti, ritenute dal compositore significativi esempi di una particolare condotta, concezione o valore. Sono composizioni paradigmatiche, fondamentali per stabilire il suo magistero compositivo.
                     </p>
-                    - [Anton Webern, Concerto op.24](https://www.youtube.com/watch?v=pVQambrIKNo)
-                    - [Anton Webern, Quartetto op.28](https://www.youtube.com/watch?v=5r29_vMzRF8)
-                    - [Béla Bartók, Sonata per due pianoforti e percussioni](https://www.youtube.com/watch?v=j6_Enhaw1Wg)
-                    - [Claude Debussy, Jeux](https://www.youtube.com/watch?v=_Q2Gd46qpAQ)
-                    - [Pierre Boulez, Le marteau sans maitre](https://www.youtube.com/watch?v=B-F1PBa85o4)
-                    - [Luigi Nono, Il canto sospeso](https://www.youtube.com/watch?v=58YmocJewH0&t=28s)
-                    <br>
-                    <br>
-                    ![](https://velitch.github.io/velitch/assets/img/learn/il_paradigma_di_stockhausen/fig2.png){: .mx-auto.d-block :}
-                    <br>
-                    <br>
-                    <h3>Le fonti del pensiero di Stockhausen</h3>
-                    <p style="text-align:justify;">
-                    Stockhausen, Karlheinz. 163. Texte zur elektronischen und instrumentalen Musik: Band 1, Aufsätze 1952-1962 zur Theorie des Komponierens. Cologne: M. DuMont Schauberg.
-                    <br>
-                    <br>
-                    ____. 1964. Texte zu eigenen Werken, zur Kunst Anderer, Aktuelles, Band 2: Aufsätze 1952-1962 zur musikalischen Praxis. Cologne: M. DuMont Schauberg.
-                    <br>
-                    <br>
-                    ____. 1971. Texte zur Musik 1963-1970, Band 3: Einführungen und Projekte, Kurse, Sendungen, Standpunkte, Nebennoten. Cologne: M. DuMont Schauberg.
-                    <br>
-                    <br>
-                    ____. 1978. Texte zur Musik 1970-1977, Band 4: Werk-Einführung, elektronische Musik, Weltmusik, Vorschläge und Standpunkte, zum Werk Anderer. Cologne: M. DuMont Schauberg.
-                    <br>
-                    <br>
-                    ____. 1982. “Donnerstang aus Licht. Michaels Jugend.” In Stockhausen in Den Haag: Documentatie Van Het Karlheinz Stockhausen Project in Het Koninklijk Conservatorium Te Den Haag, 27 Oktober Tot en Met 1 December 1982, ed Frits Weiland. Zeist: Vonk Uitgevers.
-                    <br>
-                    <br>
-                    ____. 1989a. Texte zur Musik 1977-1984, Band 5: Komposition. Cologne: M. DuMont Schauberg.
-                    <br>
-                    <br>
-                    ____. 1989b. Texte zur Musik 1977-1984, Band 6: Interpretation. Cologne: M. DuMont Schauberg.
-                  </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- Video-->
+    <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+        <div class="container">
+            <div class="title-wrapper mb-5">
+            </div>
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-4 video-block">
+                    <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=pVQambrIKNo" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                </div>
+                <div class="col-12 col-lg">
+                    <div class="text-wrapper">
+                        <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                            <strong>Anton Webern, Concerto op.24</strong>
+                        </h5>
+                        <p class="mbr-text mbr-fonts-style display-7">
+
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Video-->
+  <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+      <div class="container">
+          <div class="title-wrapper mb-5">
+          </div>
+          <div class="row align-items-center">
+              <div class="col-12 col-lg-4 video-block">
+                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=5r29_vMzRF8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              </div>
+              <div class="col-12 col-lg">
+                  <div class="text-wrapper">
+                      <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                          <strong>Anton Webern, Quartetto op.28</strong>
+                      </h5>
+                      <p class="mbr-text mbr-fonts-style display-7">
+
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=j6_Enhaw1Wg" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>Béla Bartók, Sonata per due pianoforti e percussioni</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=_Q2Gd46qpAQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Claude Debussy, Jeux</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=B-F1PBa85o4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Pierre Boulez, Le marteau sans maitre</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+  <div class="container">
+      <div class="title-wrapper mb-5">
+      </div>
+      <div class="row align-items-center">
+          <div class="col-12 col-lg-4 video-block">
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=58YmocJewH0&t=28s" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+          </div>
+          <div class="col-12 col-lg">
+              <div class="text-wrapper">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>Luigi Nono, Il canto sospeso</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
+
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+
+                    <!-- Image-->
+                          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                              <div class="container-fluid">
+                                  <div class="row justify-content-center">
+                                      <div class="col-12 col-lg-5">
+                                          <div class="image-wrapper">
+                                              <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig2.png" alt="www.gabrielavelitch.com">
+                                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 2</p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </section>
+
+                          <!-- Text-->
+                        <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                              <div class="container">
+                                  <div class="row justify-content-center">
+                                      <div class="col-md-12 col-lg-8">
+                                          <p class="mbr-text mbr-fonts-style display-7">
+                                            <b>Le fonti del pensiero di Stockhausen</b>
+                                            <br>
+                                            <br>
+                                            Stockhausen, Karlheinz. 163. Texte zur elektronischen und instrumentalen Musik: Band 1, Aufsätze 1952-1962 zur Theorie des Komponierens. Cologne: M. DuMont Schauberg.
+                                            <br>
+                                            <br>
+                                            ____. 1964. Texte zu eigenen Werken, zur Kunst Anderer, Aktuelles, Band 2: Aufsätze 1952-1962 zur musikalischen Praxis. Cologne: M. DuMont Schauberg.
+                                            <br>
+                                            <br>
+                                            ____. 1971. Texte zur Musik 1963-1970, Band 3: Einführungen und Projekte, Kurse, Sendungen, Standpunkte, Nebennoten. Cologne: M. DuMont Schauberg.
+                                            <br>
+                                            <br>
+                                            ___. 1978. Texte zur Musik 1970-1977, Band 4: Werk-Einführung, elektronische Musik, Weltmusik, Vorschläge und Standpunkte, zum Werk Anderer. Cologne: M. DuMont Schauberg.
+                                            <br>
+                                            <br>
+                                            ____. 1982. “Donnerstang aus Licht. Michaels Jugend.” In Stockhausen in Den Haag: Documentatie Van Het Karlheinz Stockhausen Project in Het Koninklijk Conservatorium Te Den Haag, 27 Oktober Tot en Met 1 December 1982, ed Frits Weiland. Zeist: Vonk Uitgevers.
+                                            <br>
+                                            <br>
+                                            ____. 1989a. Texte zur Musik 1977-1984, Band 5: Komposition. Cologne: M. DuMont Schauberg.
+                                            <br>
+                                            <br>
+                                            ____. 1989b. Texte zur Musik 1977-1984, Band 6: Interpretation. Cologne: M. DuMont Schauberg.
+                                            </p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </section>
 
 
 <!-- Prev/Next-->
