--- a/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
+++ b/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
@@ -108,7 +108,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4 video-block">
-                    <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=pVQambrIKNo" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/pVQambrIKNo" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 </div>
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
@@ -131,7 +131,7 @@
           </div>
           <div class="row align-items-center">
               <div class="col-12 col-lg-4 video-block">
-                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=5r29_vMzRF8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/5r29_vMzRF8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
               </div>
               <div class="col-12 col-lg">
                   <div class="text-wrapper">
@@ -154,7 +154,7 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=j6_Enhaw1Wg" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/j6_Enhaw1Wg" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
@@ -177,7 +177,7 @@
       </div>
       <div class="row align-items-center">
           <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=_Q2Gd46qpAQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/_Q2Gd46qpAQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
           <div class="col-12 col-lg">
               <div class="text-wrapper">
@@ -200,7 +200,7 @@
       </div>
       <div class="row align-items-center">
           <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=B-F1PBa85o4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/B-F1PBa85o4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
           <div class="col-12 col-lg">
               <div class="text-wrapper">
@@ -223,7 +223,7 @@
       </div>
       <div class="row align-items-center">
           <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/watch?v=58YmocJewH0&t=28s" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/58YmocJewH0&t=28s" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
           </div>
           <div class="col-12 col-lg">
               <div class="text-wrapper">
