--- a/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
+++ b/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html
@@ -247,8 +247,8 @@
                                   <div class="row justify-content-center">
                                       <div class="col-12 col-lg-5">
                                           <div class="image-wrapper">
-                                              <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig2.png" alt="www.gabrielavelitch.com">
-                                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 2</p>
+                                              <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig4_2.png" alt="www.gabrielavelitch.com">
+                                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4_2</p>
                                           </div>
                                       </div>
                                   </div>
