--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   })(window,document,'script','dataLayer','GTM-TLBBNHS');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6587493963161602"
+       crossorigin="anonymous"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
