--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5mZmg/iH3F3IVvGdSBOszUh3OOXsoKQ5DRn2fnByW/Pu4wKUVvqHcnh4j+nu5eTVqZicc2o/faRVgee9oAZ7K7bWq9YXN6MAEgApe+wd9FwYIteiG8mcIBUkLmLLEIH3">
+                <form action="https://gabrielavelitch.com" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5mZmg/iH3F3IVvGdSBOszUh3OOXsoKQ5DRn2fnByW/Pu4wKUVvqHcnh4j+nu5eTVqZicc2o/faRVgee9oAZ7K7bWq9YXN6MAEgApe+wd9FwYIteiG8mcIBUkLmLLEIH3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you! Message successfully sent!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
