--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="http://www.scelsi.it/it/home/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
-            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
                         <img src="img/site/scecilia-551x301.webp" data-slide-to="1" data-bs-slide-to="1" alt="">
@@ -273,7 +274,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.conservatoriosantacecilia.it" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
-            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
                         <img src="img/site/crm-551x301.webp" data-slide-to="2" data-bs-slide-to="2">
@@ -286,7 +288,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="mbr-section-btn item-footer mt-2"><a href="http://www.crm-music.it" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-4 active">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="img/site/bertoncini-550x301.webp" data-slide-to="3" data-bs-slide-to="3" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Isabella Scelsi Foundation</strong></h5>
 
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The Isabella Scelsi Foundation is a cultural institution based in Rome, Italy, devoted to the study and dissemination of Italian composer Giacinto Scelsi's (1905-1988) oeuvre and the promotion of new music all throughout the world. The Foundation – approved by the Minister of Cultural Heritage by decree of the President of the Republic in 1990 – was established on the 21st of January 1987 by Giacinto Scelsi, who named it after his sister Isabella.</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="http://www.scelsi.it/it/home/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                </div>
+            </div>
 
         </div>
     </div>
