--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="img/site/bertoncini-550x301.webp" data-slide-to="0" data-bs-slide-to="0" alt="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Isabella Scelsi Foundation</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The Isabella Scelsi Foundation is a cultural institution based in Rome, Italy, devoted to the study and dissemination of Italian composer Giacinto Scelsi's (1905-1988) oeuvre and the promotion of new music all throughout the world. The Foundation – approved by the Minister of Cultural Heritage by decree of the President of the Republic in 1990 – was established on the 21st of January 1987 by Giacinto Scelsi, who named it after his sister Isabella.</p>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Università Roma3</strong></h5>
+  <!--
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The Isabella Scelsi Foundation is a cultural institution based in Rome, Italy, devoted to the study and dissemination of Italian composer Giacinto Scelsi's (1905-1988) oeuvre and the promotion of new music all throughout the world. The Foundation – approved by the Minister of Cultural Heritage by decree of the President of the Republic in 1990 – was established on the 21st of January 1987 by Giacinto Scelsi, who named it after his sister Isabella.</p>-->
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="http://www.scelsi.it/it/home/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.uniroma3.it/insegnamento-erogato/dipartimento-di-filosofia-comunicazione-e-spettacolo/l/2020-2021/dams-discipline-delle-arti-della-musica-e-dello-spettacolo-0580706200300002/6f17b962-8ffc-4748-ab91-7bad4d6e7ee4--20710327/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-3">
@@ -269,8 +269,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Conservatory Santa Cecilia</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The "Santa Cecilia" Conservatory of Music in Rome is an Institute of Higher Musical Education belonging to the Ministry of Education, University and Research of the Italian State. The "Santa Cecilia" Conservatory of Music in Rome operates nationally and internationally, carries out a careful work of dissemination and development of talents in the area, carries out training, music production and research activities.</p>
+  <!--
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The "Santa Cecilia" Conservatory of Music in Rome is an Institute of Higher Musical Education belonging to the Ministry of Education, University and Research of the Italian State. The "Santa Cecilia" Conservatory of Music in Rome operates nationally and internationally, carries out a careful work of dissemination and development of talents in the area, carries out training, music production and research activities.
+                        </p>-->
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.conservatoriosantacecilia.it" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
@@ -282,8 +283,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Centro Ricerche Musicali</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">A non-profit cultural centre, CRM was founded at Rome in 1988 by composers Laura Bianchini and Michelangelo Lupone with a group of musicians and researchers for the purpose of promoting research into the aesthetic, analytical, musicological and scientific aspects of music. In 1990 CRM was officially recognized as a “Music Research Centre” by the Ministry for University Education and Scientific &amp; Technological Research and subsequently, in 1993, by the Japan Foundation.</p>
+  <!--
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">A non-profit cultural centre, CRM was founded at Rome in 1988 by composers Laura Bianchini and Michelangelo Lupone with a group of musicians and researchers for the purpose of promoting research into the aesthetic, analytical, musicological and scientific aspects of music. In 1990 CRM was officially recognized as a “Music Research Centre” by the Ministry for University Education and Scientific &amp; Technological Research and subsequently, in 1993, by the Japan Foundation.</p>-->
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="http://www.crm-music.it" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
@@ -295,8 +296,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Isabella Scelsi Foundation</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The Isabella Scelsi Foundation is a cultural institution based in Rome, Italy, devoted to the study and dissemination of Italian composer Giacinto Scelsi's (1905-1988) oeuvre and the promotion of new music all throughout the world. The Foundation – approved by the Minister of Cultural Heritage by decree of the President of the Republic in 1990 – was established on the 21st of January 1987 by Giacinto Scelsi, who named it after his sister Isabella.</p>
+  <!--
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The Isabella Scelsi Foundation is a cultural institution based in Rome, Italy, devoted to the study and dissemination of Italian composer Giacinto Scelsi's (1905-1988) oeuvre and the promotion of new music all throughout the world. The Foundation – approved by the Minister of Cultural Heritage by decree of the President of the Republic in 1990 – was established on the 21st of January 1987 by Giacinto Scelsi, who named it after his sister Isabella.</p>-->
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="http://www.scelsi.it/it/home/" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
                 </div>
