--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="img/site/bertoncini-550x301.webp" data-slide-to="0" data-bs-slide-to="0" alt="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Università Roma3</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Università degli Studi Roma Tre</strong></h5>
   <!--
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">The Isabella Scelsi Foundation is a cultural institution based in Rome, Italy, devoted to the study and dissemination of Italian composer Giacinto Scelsi's (1905-1988) oeuvre and the promotion of new music all throughout the world. The Foundation – approved by the Minister of Cultural Heritage by decree of the President of the Republic in 1990 – was established on the 21st of January 1987 by Giacinto Scelsi, who named it after his sister Isabella.</p>-->
                     </div>
