--- a/pages/learn/il_paradigma_di_stockhausen/01_00_il_paradigma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/01_00_il_paradigma.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <style>
+    .unselectable {
+      -webkit-user-select: none;
+      -webkit-touch-callout: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+  </style>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
