--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </section>
 
+<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-10">
+                <div class="mbr-section-btn align-center">
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/cv_gabrielavelitch.pdf">&nbsp; &nbsp; Download CV &gt;&nbsp; &nbsp;</a></div>
+                    <br>
+                    <br>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 <section data-bs-version="5.1" class="features1 cid-sYxCedtxpF mbr-parallax-background" id="features1-p">
