--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 <div class="mbr-section-btn align-center">
-                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/cv_gabrielavelitch.pdf">&nbsp; &nbsp; Download CV &gt;&nbsp; &nbsp;</a></div>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/cv_gabrielavelitch.pdf">&nbsp; &nbsp; Download CV&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
