--- a/pages/learn/il_paradigma_di_stockhausen/03_02_valori.html
+++ b/pages/learn/il_paradigma_di_stockhausen/03_02_valori.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
 <script>
@@ -18,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Paradigma</title>
+  <title>Il Concetto di Pregiudizio</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -77,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Il Paradigma di Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Il Paradigma</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Il Concetto di Pregiudizio</strong></h4>
             </div>
         </div>
     </div>
@@ -92,48 +93,7 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    L'equiparazione tra paradigma scientifico e paradigma in senso estetico è frutto delle riflessioni di un musicologo olandese che si chiama <i>Alcedo Coenen</i>.
-                    <br>
-                    <br>
-                    Ha pensato di stabilire una relazione tra il paradigma delle rivoluzioni scientifiche (cosi come é stato definito dallo studioso di filosofia e storia della scienza <i>Thomas Kuhn</i>) e i fatti estetici, le questioni relative all'arte e in particolare alla musica. In pratica è come se un determinato autore, nell'arco della sua esistenza, o nell'arco di alcune fasi della sua vita, agisse sulla base di un paradigma, di una condizione epistemologica (studio dei processi cognitivi attraverso la ricostruzione delle fasi di sviluppo di un individuo) paragonabile a quella con cui si svolge la scienza di un determinato periodo.
-                    <br>
-                    <br>
-                    Vediamo di cosa si tratta con l'aiuto di queste immagini:
-                    </p>
-                  </div>
-              </div>
-          </div>
-      </section>
-
-<!-- Image-->
-      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-          <div class="container-fluid">
-              <div class="row justify-content-center">
-                  <div class="col-12 col-lg-5">
-                      <div class="image-wrapper">
-                          <img src="https://www.gabrielavelitch.com/img/il_paradigma_di_stockhausen/fig1.png" alt="www.gabrielavelitch.com">
-                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 1</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
-
-      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-          <div class="container">
-              <div class="row justify-content-center">
-                  <div class="col-md-12 col-lg-8">
-                      <p class="mbr-text mbr-fonts-style display-7">
-                    <b>Paradigma vigente</b>: è l'insieme di tutta una serie di credenze, assunti e rappresentazioni che caratterizzano la scienza di un certo periodo.
-                    <br>
-                    <br>
-                    <i>Thomas Kuhn</i> sostiene che tutte le rivoluzioni scientifiche avvengono secondo uno schema simile e in particolare si ha una rivoluzione scientifica quando si presenta un'anomalia, ossia un problema che il paradigma vigente non é in grado di risolvere. Questo mette in crisi il vecchio paradigma e determina il sorgere di nuove ipotesi che tuttavia, pur facendo emergere di già un nuovo paradigma, entrano per il momento in conflitto con il paradigma vigente e quindi si creano fratture tra i sostenitori di un vecchio stato di cose e i sostenitori del nuovo.
-                    <br>
-                    <br>
-                    Alla fine, inevitabilmente, il nuovo paradigma vigente è quello che esce fuori dalle risoluzioni di questo conflitto. Si ha dunque un nuovo assetto di convinzioni, rappresentazioni e assunti di base.
-                    <br>
-                    <br>
-                    Possiamo dunque dire che il paradigma vigente, per quanto riguarda la musica, i periodi storici e gli autori, é un insieme stabile di condizioni e convinzioni. Questa parificazione ci è utile perché ci permette in prospettiva di considerare eventuali fratture storiche o anomalie, sotto questo tipo di rappresentazione concettuale <i>(fig.1)</i>.
+                    
                   </p>
                 </div>
             </div>
@@ -147,8 +107,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center">
-                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/02_00_il_concetto_di_pregiudizio.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
@@ -163,19 +123,7 @@
 
   <section style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
-    <script type="text/javascript">
-    $(document).ready(function () {
-        //Disable full page
-        $('body').bind('cut copy paste', function (e) {
-            e.preventDefault();
-        });
 
-        //Disable part of page
-        $('#id').bind('cut copy paste', function (e) {
-            e.preventDefault();
-        });
-    });
-    </script>
    <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
    <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
    <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
